--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     </div>
                     <!-- Right Column -->
                     <div class="right-column text-center d-flex justify-content-center pe-0">
-                        <img id="img-fluid" class="h-auto banner" src="vendor/res/banner-1.png" alt="" />
+                       
                     </div>
                 </div>
-            </div>
+           <div>
         </div>
     </section>
     <section class="h-100 w-100 bg-white" id="aboutus" style="box-sizing: border-box">
